# tree-dlib

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  buidler.config.ts  hardhat.config.ts  package.json  tsconfig.json
.github/workflows/: build.yml
contracts/: Tree.sol
contracts/test/: TestTree.sol
deploy/: 01_tree.ts  02_tests.ts
deploy/test/: 02_tests.ts
deployments/avax_testnet/: Tree.json
deployments/bsc_testnet/: Tree.json
deployments/goerli/: Tree.json
deployments/kovan/: Tree.json
deployments/mainnet/: Tree.json
deployments/optimism_goerli/: Tree.json
deployments/polygon_mumbai/: Tree.json
deployments/rinkeby/: Tree.json
deployments/ropsten/: Tree.json
export/abi/: avax_testnet.json  bsc_testnet.json  goerli.json  kovan.json  mainnet.json  matic_testnet.json  optimism_goerli.json  polygon_mumbai.json  rinkeby.json  ropsten.json
export/artifacts/: TestTree.json  Tree.json
export/artifacts/contracts/Tree.sol/: Tree.json
export/artifacts/contracts/test/TestTree.sol/: TestTree.json
scripts/: delegate_tests.sh  deploy_test_tree.ts
test/: test_tree.ts
tree/: Cargo.toml  build.rs
tree/src/: error.rs  lib.rs  tree_fold.rs  tree_lib.rs  tree_serde.rs  tree_server.rs  tree_server_main.rs
tree/src/fold/: mod.rs  tree_delegate.rs
tree/src/fold/contracts/: mod.rs  test_tree_contract.rs  tree_contract.rs
tree/tests/: run_tree_test.sh  tree_test.rs
