[package]
name = "tree"
version = "0.1.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2018"

[dependencies]
state-fold = { git = "https://github.com/cartesi/state-fold", rev = "ace5480" }
offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "bcab565" }

async-trait = "0.1"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
ethabi = { version = "14.0.0", default-features = false }
futures = "0.3"
im = "15.0"
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1", features = ["sync"] }

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
serde_json = "1.0"
