[package]
name = "tree"
version = "0.1.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2018"

# main tree server binary
[[bin]]
name = "tree_server_main"
path = "src/tree_server_main.rs"

[dependencies]
state-fold = { git = "https://github.com/cartesi/state-fold", rev = "f6f06a1" }
offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "f43b889" }
state-server-grpc = { git = "https://github.com/cartesi/state-fold", rev = "f6f06a1" }

async-trait = "0.1"
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
ethabi = { version = "14.0.0", default-features = false }
futures = "0.3"
im = { version = "15.0", features = ["serde"] }
serde = { version = "1.0.0", features = ["rc"] }
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1", features = ["sync"] }
tonic = "0.4"

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4690f8e" }
serde_json = "1.0"
