[package]
name = "tree"
version = "0.1.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2018"

# main tree server binary
[[bin]]
name = "tree_server_main"
path = "src/tree_server_main.rs"

[dependencies]
state-fold = { git = "https://github.com/cartesi/state-fold", rev = "64f9c0e" }
offchain-core = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
state-server-grpc = { git = "https://github.com/cartesi/state-fold", rev = "64f9c0e" }

async-trait = "0.1"
ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
ethers-core = { version = "^0.5.0", features = [ "legacy" ] }
ethers-contract = { version = "^0.5.0", features = [ "legacy" ] }
ethers-providers = { version = "^0.5.0", features = [ "ws" ] }
futures = "0.3"
im = { version = "15.0", features = ["serde"] }
serde = { version = "1.0.0", features = ["rc"] }
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1", features = ["sync"] }
tonic = "0.4"

[build-dependencies]
ethers = { version = "0.5.3", features = [ "legacy", "ws" ] }
serde_json = "1.0"
